Fix styling of wallet amount in details page and fix for icon in overview.
The wallet amount hid under the transaction list when you shrunk the width
of the window. This fix makes sure it is always shown at the top.

Also the icon shown for a wallet in the main view was way too small and kind
of grey. This now fixes the size to be larger and obviously nicer.

--- a/packages/lw-2/src/app/wallets/wallet-details/wallet-details.scss
+++ b/packages/lw-2/src/app/wallets/wallet-details/wallet-details.scss
@@ -26,10 +26,10 @@ wallet-details-view {
     color: color($colors, light);
   }
   .balance-header {
-    padding-top: 56px;
+    padding-bottom: 56px;
     margin-top: 0;
     color: color($colors, light);
-    height: 200px;
+    height: 20%;
     text-align: center;
   }
   .balance-header.default {
